<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/olive_green"
    tools:context=".SplashScreenFragment">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="51dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="51dp"
        android:layout_marginBottom="68dp"
        android:singleLine="true"
        android:text="@string/game_name"
        android:textColor="@color/teal_700"
        android:textSize="@dimen/text_size30"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/rules_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/rules"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="114dp"
        android:layout_marginEnd="113dp"
        android:layout_marginBottom="25dp"
        android:text="@string/rules_label"
        android:textSize="@dimen/text_size20"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/rules_list"
        app:layout_constraintEnd_toEndOf="@+id/PersonName"
        app:layout_constraintStart_toStartOf="@+id/welcome"
        app:layout_constraintTop_toBottomOf="@+id/welcome" />

    <TextView
        android:id="@+id/rules_list"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/rules"
        android:textSize="@dimen/text_size20"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/PersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome" />

    <EditText
        android:id="@+id/PersonName"
        android:layout_width="304dp"
        android:layout_height="0dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="81dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rules_list" />

    <Button
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="83dp"
        android:layout_marginBottom="85dp"
        android:text="@string/start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PersonName" />
</androidx.constraintlayout.widget.ConstraintLayout>